@@ -1,16 +1,7 @@
-const advice = require('./advice.js');
 const kys = require('./kys.js');
-const help = require('./help.js');
-const patchNotes = require('./patchNotes.js');
-const names = require('./names.js');
 const bugs = require('./bugs.js');
 const echo = require('./echo.js');
-const taboo = require('./taboo.js');
-const roll = require('./roll.js');
 const blackjack = require('./blackjack.js');
-const events = require('./events.js');
-const mute = require('./mute.js');
-const meme = require('./meme.js');
 const default_ = require('./default.js');
 
 /**
@@ -21,19 +12,10 @@ const default_ = require('./default.js');
 */
 
 const commandArray = [
-	advice,
 	kys,
-	help,
-	patchNotes,
-	names,
 	bugs,
 	echo,
-	taboo,
-	roll,
 	blackjack,
-	events,
-	mute,
-	meme,
 	default_
 ];
 
