@@ -1,5 +1,6 @@
 2022/02/22
 • Slash command support for macros replaces older shorthand command.
+• Removed most old-style commands now that they've been replaced with slash commands.
 2022/02/21
 • Slash command support for praise and shame.
 2022/02/19
